# Hyperliquid-Quantitative-Trading-Research-Platform

./: .env.example  .gitignore  BUILD_LOG.md  LICENSE  README.md  main.py  pyproject.toml  run_dashboard.bat
scripts/: app.py  fetch_historical.py  run_backtest.py  test_backtest_parity.py
src/: backtest_core.py  backtester.py  client.py  config.py  engine.py  events.py  execution.py  hyperliquid_client.py  indicators.py  market_data.py  retry.py  risk.py  state_store.py  strategy.py  strategy_registry.py  strategy_runner.py
src/strategies/: _template.py  breakout_volume.py  ma_crossover.py  rsi_reversion.py
tests/: test_backtest_parity.py  test_execution.py  test_indicators.py  test_risk.py  test_segmentation.py  test_strategy.py
